<resources>
    <string name="dialog_location_title">Coordinates</string>
	<string name="latitude">Latitude</string>
	<string name="longitude">Longitude</string>
	<string name="zoomlevel">Zoom Level</string>
    <string name="menu_position_enter_coordinates">Map Position</string>
    <string name="menu_svgclear">Clear SVG icon cache</string>
    <string name="preferences_scale">Display Scale</string>
    <string name="preferences_scale_desc">Adjust scale of the map display</string>
    <string name="preferences_scalebar">Scale bar</string>
    <string name="preferences_scalebar_desc">Set units system on the scale bar</string>
    <string name="preferences_textwidth">Maximum Textwidth</string>
    <string name="preferences_textwidth_desc">Debugging aid for setting maximum textwidth</string>
    <string name="preferences_category_wayfiltering">Way filtering</string>
    <string name="preferences_wayfiltering">Way filtering</string>
    <string name="preferences_wayfiltering_desc">Way filtering reduces the number of ways returned at the risk of clipping artifacts.</string>
    <string name="preferences_wayfiltering_distance">Way filter size</string>
    <string name="preferences_wayfiltering_distance_desc">The higher the number the less artifacts, but slower.</string>
    <string name="preferences_category_tilecache">Tilecache</string>
	<string name="preferences_tilecache_persistence">Persistence</string>
	<string name="preferences_tilecache_persistence_desc">Keep tiles over activity restart.</string>
    <string name="preferences_tilecache_threading">Threading</string>
    <string name="preferences_tilecache_threading_desc">Threading makes the app more responsive, with some risk.</string>
    <string name="preferences_tilecache_queuelimit">Queue limit</string>
    <string name="preferences_tilecache_queuelimit_desc">The higher the limit, the more memory is needed. Risk of OOM.</string>
    <string name="preferences_debug_timing">Debug timing</string>
    <string name="preferences_debug_timing_desc">Measure rendering time</string>
    <string name="preferences_r4_emergency">Emergency</string>
    <string name="preferences_r4_emergency_desc">Show hospitals, doctors, police etc</string>
    <string name="preferences_r4_accommodation">Accommodation</string>
    <string name="preferences_r4_accommodation_desc">Show hostels, guesthouses, campsites etc</string>
    <string name="preferences_r4_tourism_poi">Tourism</string>
    <string name="preferences_r4_tourism_poi_desc">Show points of interest</string>
    <string name="preferences_r4_shopping">Shopping</string>
    <string name="preferences_r4_shopping_desc">Show shops</string>
    <string name="preferences_r4_amenities">Amenities</string>
    <string name="preferences_r4_amenities_desc">Show amenities???</string>
    <string name="preferences_r4_public_transport">Transport</string>
    <string name="preferences_r4_public_transport_desc">Show transport</string>
    <string name="preferences_r4_food">Food</string>
    <string name="preferences_r4_food_desc">Show restaurants</string>
    <string name="preferences_r4_traffic">Traffic</string>
    <string name="preferences_r4_traffic_desc">Show traffic/transport??</string>
    <string name="preferences_r4_barriers">Barriers</string>
    <string name="preferences_r4_barriers_desc">Show barriers</string>
    <string name="preferences_r4_sports">Sports</string>
    <string name="preferences_r4_sports_desc">Show sports facilities</string>
    <string name="preferences_r4_places">Places</string>
    <string name="preferences_r4_places_desc">Show place names</string>
    <string name="preferences_r4_buildings">Buildings</string>
    <string name="preferences_r4_buildings_desc">Show buildings</string>
    <string name="preferences_r4_nature">Nature</string>
    <string name="preferences_r4_nature_desc">Show natural items</string>
    <string name="preferences_r4_areas">Areas</string>
    <string name="preferences_r4_areas_desc">Show areas</string>
    <string name="preferences_r4_roads">Roads</string>
    <string name="preferences_r4_roads_desc">Show roads</string>
    <string name="preferences_r4_waterbodies">Water</string>
    <string name="preferences_r4_waterbodies_desc">Show lakes, rivers etc</string>
    <string name="bereits_geklettert">bereits geklettert</string>
    <string name="own_list">Eigene Wegeliste</string>
    <string name="eintrag_loeschen">Eintrag löschen</string>
    <string name="eintrag_aktualisiert">Eintrag aktualisiert</string>
    <string name="eintrag_loeschen_long">Soll dieser Eintrag aus der eigenen Wegeliste entfernt werden?</string>
    <string name="eigene_wegeliste_aktualisieren">Eintrag in eigener Wegeliste aktualisieren</string>
    <string name="ausklappen">ausklappen</string>
    <string name="einklappen">einklappen</string>
    <string name="geklettert_mit">Geklettert mit</string>
    <string name="bemerkungen">Bemerkungen</string>
    <string name="hinweis_vorstieg">im Vorstieg</string>
    <string name="hinweis_nachstieg">im Nachstieg</string>
    <string name="hinweis_rp">Rotpunkt</string>
    <string name="am">Am:</string>
    <string name="eintrag">Eintrag</string>
    <string name="eintraege">Einträge</string>
    <string name="eintraege_geloescht">aus eigener Wegeliste entfernt</string>
    <string name="anfang">Anfang</string>
    <string name="ende">Ende</string>
    <string name="post_listende">der Suchergebnisliste erreicht</string>
    <string name="im_nachstieg">im Nachstieg</string>
    <string name="im_vorstieg">im Vorstieg</string>
    <string name="vorstieg">Vorstieg</string>
    <string name="rp">RP</string>
    <string name="ou">oU</string>
    <string name="oulong">o. U.</string>
    <string name="vorheriger_weg">vorheriger Weg</string>
    <string name="nachster_weg">nächster Weg</string>
    <string name="bestiegene">bestiegene Gipfel</string>
    <string name="gipfelkuchen">Gipfelkuchen</string>
    <string name="kein_gps_aktiviert">Ihre aktuelle Position konnte nicht ermittelt werden. Bitte aktivieren Sie GPS.</string>
    <string name="nur">nur</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
    <string name="anzahl_geklettert">Anzahl geklettert</string>
    <string name="anzahl_nachgestiegen">Anzahl nachgestiegen</string>
    <string name="anzahl_vorgestiegen">Anzahl vorgestiegen</string>
    <string name="anzahl_RP">Anzahl vorgestiegen und RP</string>
    <string name="nicht_bestiegen">noch nicht bestiegener Gipfel</string>
    <string name="nicht_geklettert_markieren_title">Weg aus persönlicher Datenbank entfernen</string>
    <string name="nicht_geklettert_markieren_desc">Soll der Weg als nicht geklettert markiert werden?</string>
    <string name="alle_wege">Alle Wege</string>
    <string name="alle_gebiete">Alle Gebiete</string>
    <string name="keine_suche_erfolgt">Bisher ist noch keine Suche erfolgt</string>
    <string name="suchformular">Suchformular</string>
    <string name="letzte_anfragen">Letzte Suchanfragen</string>
    <string name="app_name">Elbi</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_search">Suche</string>
    <string name="action_legend">Legende</string>
    <string name="show">show</string>
    <string name="treffer">Treffer</string>
    <string name="hello_world">Hello world!</string>
    <string name="gebiet">Gebiet</string>
    <string name="none"></string>
    <string name="create">erschaffe</string>
    <string name="destroy">zerstöre</string>
    <string name="gipfel">Gipfel</string>
    <string name="gipfelnummer">Gipfelnummer</string>
    <string name="tag">tag</string>
    <string name="weg">Weg</string>
    <string name="schwierigkeit">Schwierigkeit</string>
    <string name="anzahl">Anzahl</string>
    <string name="von">von</string>
    <string name="bis">bis</string>
    <string name="minus">-</string>
    <string name="clear">Clear</string>
    <string name="letzteSuchanfragen">Letzte Suchanfragen</string>
    <string name="letzteSuchanfrage">Letzte Suchanfrage</string>
    <string name="suche_starten">Suche starten</string>
    <string name="suche_erfolglos">Suche erfolglos - bitte Eingabe ändern</string>
    <string name="fehlerhafte_eingabe">Fehlerhafte Eingabe - Eingabe wird zurückgesetzt</string>
    <string name="ok">OK</string>
    <string name="wegbeschreibung">Wegbeschreibung</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="suchergebnisse">Suchergebnisse</string>
    <string name="start_suche">Suche starten</string>
    <string name="live_karte">Live Karte</string>
    <string name="title_activity_live_karte">Elbi Live Karte</string>
    <string name="progress_dialog_title_downloading">Download läuft &#x2026;</string>
    <string name="progress_dialog_title_connecting">Internetverbindung wird hergestellt &#x2026;</string>
    <string name="user_message_download_complete">Download komplett!</string>
    <string name="user_message_download_complete_map_long">Der Download der Offline-Karte wurde abgeschlossen.</string>
    <string name="user_message_download_canceled">Download abgebrochen!</string>
    <string name="user_message_download_canceled_long">Der Download konnte nicht wie gewünscht beendet werden. Möchten Sie die Offline-Karte benutzen, überprüfen Sie bitte Ihre Internet-Verbindung und wiederholen den Download-Vorgang.</string>
    <string name="progress_dialog_message_prefix_downloading">Karte wird ins Verzeichnis Elbi/ heruntergeladen.</string>
    <string name="progress_dialog_message_prefix_connecting">Verbindung herstellen</string>
    <string name="error_message_general">Fehler beim Herunterladen!</string>
    <string name="user_message_unzip">Kartendaten werden entpackt.</string>
    <string name="error_message_ftp_connection">Fehler bei der Verbindungsherstellung zum ftp-Server. Ist deine Internet Verbindung OK?</string>
    <string name="offline_karte_holen">Karte für Offline-Verwendung herunterladen</string>
    <string name="offline_karte_updaten">Offline-Karte aktualisieren</string>
    <string name="error_last_location_unknown">Ihre letzte Position ist unbekannt</string>
    <string name="snap_to_location_enabled">Zu aktueller Position springen wurde aktiviert</string>
    <string name="snap_to_location_disabled">Zu aktueller Position springen wurde deaktiviert</string>
    <string name="unit_symbol_kilometer">&#160;km</string>
    <string name="unit_symbol_meter">&#160;m</string>
    <string name="menu_preferences">Einstellungen</string>
    <string-array name="preferences_map_generator_values">
        <item>OpenStreetMap (offline - empfohlen)</item>
        <item>Mapnik (online - weltweit)</item>
        <item>OpenCycleMap (online - weltweit)</item>
    </string-array>
    <string-array name="preferences_scale_bar_unit_values">
        <item>angloamerikanisch (ft, mi)</item>
        <item>metrisch (m, km)</item>
    </string-array>
    <string-array name="preferences_text_scale_values">
        <item>winzig</item>
        <item>klein</item>
        <item>normal</item>
        <item>groß</item>
        <item>riesig</item>
    </string-array>
    <string name="preferences_debug">Entwicklungs-Einstellungen</string>
    <string name="preferences_general">Allgemeine Einstellungen</string>
    <string name="preferences_cache_persistence">Cache-Persistenz</string>
    <string name="preferences_cache_persistence_desc">Zwischenspeicher der Karte beim Beenden beibehalten</string>
    <string name="preferences_fullscreen">Vollbildmodus</string>
    <string name="preferences_fullscreen_desc">Verberge die Statusleiste</string>
    <string name="preferences_map">Karteneinstellungen</string>
    <string name="beschreibung_vorlesen">Beschreibung vorlesen lassen</string>
    <string name="geklettert">geklettert</string>
    <string name="noch_nicht_geklettert">noch nicht geklettert</string>
    <string name="statistik">Statistik</string>
</resources>