<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eiszeit"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonLiveKarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSuche"
        android:layout_alignBottom="@+id/buttonSuche"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/ic_action_world"
        android:onClick="onLiveKarteClick"
        android:text="@string/live_karte" />

    <Button
        android:id="@+id/buttonSuche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/ic_action_search"
        android:onClick="openSearch"
        android:text="@string/action_search" />

    <Button
        android:id="@+id/buttonEinstellungen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonKarteDownload"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_action_settings_light"
        android:onClick="openSettings"
        android:text="@string/action_settings"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonKarteDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/offline_karte_holen"
        android:onClick="karteHerunterladenClick"        
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonStatistik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonEinstellungen"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/chart_bar"
        android:onClick="onStatistikClick"
        android:text="@string/statistik"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttonletzteSuche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonStatistik"
        android:layout_centerHorizontal="true"
        android:onClick="openLastSearch"
        android:text="@string/letzteSuchanfrage"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/buttongekletterteWege"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonletzteSuche"
        android:layout_centerHorizontal="true"
        android:onClick="openOwnList"
        android:text="@string/own_list"
        android:textColor="@color/white" />

</RelativeLayout>
